# Multi_Agent_Ollama3

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.agents/skills/google-style-python-docstrings/: SKILL.md
.agents/skills/python-pep484-typing/: SKILL.md
.agents/skills/python-pytest/: SKILL.md
app/core/: graph.py  llm_factory.py  prompts.py
app/core/agents/: tutor_agents.py
app/core/rag/: vector_store_data.py
app/ui/: streamlit_app.py  telegram_bot.py
app/utils/: logger.py  pydantic_config.py  sanitizer.py  youtube_fetcher.py
tests/: conftest.py  test_graph.py  test_llm_factory.py  test_models.py  test_prompts.py  test_sanitizer.py
